# SBC-Valuation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
sbc_valuation/: run.py
source/: api_reference.rst  conf.py  contributing.rst  index.rst  introduction.rst  testing.rst  usage.rst
tests/: test_run.py
